@@ -1,12 +1,17 @@
 package dev.danvega.courses;
 
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.List;
+
 import org.springframework.ai.tool.ToolCallback;
 import org.springframework.ai.tool.ToolCallbacks;
 import org.springframework.boot.SpringApplication;
 import org.springframework.boot.autoconfigure.SpringBootApplication;
 import org.springframework.context.annotation.Bean;
 
-import java.util.List;
+import dev.danvega.courses.service.ProductService;
+import dev.danvega.courses.service.SellerService;
 
 @SpringBootApplication
 public class CoursesApplication {
@@ -16,8 +21,10 @@ public class CoursesApplication {
 	}
 
 	@Bean
-	public List<ToolCallback> danTools(CourseService courseService) {
-		return List.of(ToolCallbacks.from(courseService));
+	public List<ToolCallback> productTools(ProductService productService, SellerService sellerService) {
+		List<ToolCallback> callbacks = new ArrayList<>();
+		callbacks.addAll(Arrays.asList(ToolCallbacks.from(productService)));
+		callbacks.addAll(Arrays.asList(ToolCallbacks.from(sellerService)));
+		return callbacks;
 	}
-
 }
